fix: extra padding removed

--- a/watcher/src/styles/pages/_settings.scss
+++ b/watcher/src/styles/pages/_settings.scss
@@ -4,10 +4,6 @@
   padding-bottom: 70px;
 }
 
-.settings-layout {
-  padding-top: 70px;
-}
-
 .settings-header {
   background-color: $background;
   border-bottom: 1px solid $border;
